# jarvis-skills

./: .env.example  .gitignore  .mcp.json  GEMINI.md  README.md  main.py  mcp.json  pyproject.toml  pyrightconfig.json  server.py
.github/: copilot-instructions.md
rust-mcp-server/: .env.example  Cargo.toml  README.md
rust-mcp-server/src/: intent.rs  lib.rs  main.rs
rust-mcp-server/src/intent/: mappings.rs  mod.rs  patterns.rs
rust-mcp-server/src/rpc/: mod.rs  stdio.rs
rust-mcp-server/src/tools/: bluetooth_device.rs  categorizer.rs  collision_handler.rs  directory_listing.rs  file_collector.rs  mod.rs  network.rs  organizer.rs  path_security.rs  registry.rs  resolve_path.rs  shell.rs  spotify.rs  spotify_api.rs  system.rs  volume.rs
rust-mcp-server/src/tools/registry_spotify/: definitions.rs  mod.rs
rust-mcp-server/src/tools/spotify/: auth_handler.rs  helpers.rs  read_handler.rs  write_handler.rs
rust-mcp-server/src/tools/spotify_api/: album.rs  library.rs  models.rs  playback.rs  playlist.rs  playlist_management.rs  query.rs
rust-mcp-server/src/tools/spotify_auth/: mod.rs  server.rs
rust-mcp-server/tests/: tool_tests.rs
rust-mcp-server/tests/tests/: tool_tests.rs
src/jarvis_skills/: __init__.py  models.py  registry.py  server.py
src/jarvis_skills/tools/: __init__.py  folder_organizer.py  network.py  spotify.py  system_info.py  volume.py
tests/: test_server.py  test_tools.py
