[project]
name = "jarvis-skills"
version = "0.1.0"
description = "JARVIS Skills - MCP Server and Tools for system control"
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.16",
    "fastapi>=0.135.3",
    "psutil>=7.0.0",
    "pycaw>=20251023",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
volume = ["pycaw>=20230407", "comtypes>=1.4.0"]
spotify = ["spotipy>=2.24.0"]
all = ["pycaw>=20230407", "comtypes>=1.4.0", "spotipy>=2.24.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

