[project]
name = "jarvis-skills"
version = "0.2.0"
description = "JARVIS Skills - MCP Server aggregator for system control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "PROJECT-JARV1S" }
]
keywords = ["jarvis", "mcp", "skills", "ai", "assistant", "system", "spotify"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "granian[reload]>=2.5.0",
    "jarvis-skills-core>=0.1.0",
    "jarvis-skills-hardware-monitor>=0.1.0",
    "jarvis-skills-spotify>=0.1.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Platform-specific extras
windows = [
    "pycaw>=20230407",
    "comtypes>=1.4.0",
]
spotify = [
    "spotipy>=2.23.0",
]
all = [
    "pycaw>=20230407",
    "comtypes>=1.4.0",
    "spotipy>=2.23.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis_skills"]

# For local development, use path dependencies
[tool.uv.sources]
jarvis-skills-core = { path = "packages/core", editable = true }
jarvis-skills-hardware-monitor = { path = "packages/hardware-monitor", editable = true }
jarvis-skills-spotify = { path = "packages/spotify", editable = true }

